Omelette recipe page created using layout of curry webpage.

--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-
+    <ul>
     <a href="./recipes/katsucurry.html">Katsu Curry</a>
+    <a href="./recipes/omelette.html">Omelette</a>
+    </ul>
 </body>
 </html>
