--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 <body>
     <h1>Odin Recipes</h1>
     <ul>
-    <a href="./recipes/katsucurry.html">Katsu Curry</a>
-    <a href="./recipes/omelette.html">Omelette</a>
+    <li><a href="./recipes/katsucurry.html">Katsu Curry</a></li>
+    <li><a href="./recipes/omelette.html">Omelette</a></li>
     </ul>
 </body>
 </html>
